--- a/first-jsf-app/src/main/webapp/WEB-INF/fragments/navigation.xhtml
+++ b/first-jsf-app/src/main/webapp/WEB-INF/fragments/navigation.xhtml
@@ -1,7 +1,5 @@
 <html lang="en"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
+      xmlns:h="http://java.sun.com/jsf/html">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
