--- a/first-jsf-app/src/main/webapp/WEB-INF/fragments/navigation.xhtml
+++ b/first-jsf-app/src/main/webapp/WEB-INF/fragments/navigation.xhtml
@@ -16,6 +16,9 @@
             <li class="nav-item #{pageName == 'Category' ? 'active' : ''}">
                 <h:link styleClass="nav-link" value="Category" outcome="/category"/>
             </li>
+            <li class="nav-item #{pageName == 'Cart' ? 'active' : ''}">
+                <h:link styleClass="nav-link" value="Cart" outcome="/cart"/>
+            </li>
         </ul>
     </div>
 </nav>
